styling the page

--- a/src/styles/HeroSection.css
+++ b/src/styles/HeroSection.css
@@ -1,6 +1,6 @@
 .hero {
 
-  background-color: #3e498a;
+  background-color: #242c55;
   background-size: cover;
   background-position: center;
   height: 100vh;
