--- a/src/styles/Skilles.css
+++ b/src/styles/Skilles.css
@@ -5,7 +5,7 @@
   line-height: 1.6;
 }
 .Skills-container{
-    background-color: rgb(29, 28, 28);
+     background-color: #242c55;
     color: white;
     padding: 10px;
     margin-top: 60px;
